<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="coloa">THPT CỔ LOA</string>
    <string name="dhcn">Đại học Công nghiệp HN</string>
    <string name="app_name">PushNotificationDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="thongbao1">Nhập thông báo</string>
    <string name="giaovien">Giáo viên: </string>
    <string name="monhoc">Môn học:</string>
    <string name="covan">Cô Lê Vân</string>
    <string name="lh">Liên hệ : Cô Vân - 0167.904.0716</string>
    <string name="ql">Mama Tổng quản</string>
    <string name="dc">Số 32-Ngõ 3-Đường 2-Tàm Xá</string>
    <string name="ntt">THPT Nguyễn Tất Thành</string>
    <string name="buoihoc">Buổi học</string>
    <string name="ten_trungtam">Trung tâm luyện thi Đại học</string>
    <string name="tatthanh"> Thầy Tiến</string>
    <string name="lop">Lớp</string>
    <string name="giohoc">Giờ học </string>
    <string name="ngay" >Thứ</string>
    <string name="tb">Thầy Tiến Bạc</string>
    <string name="tn">Thầy Trường Nghiêm</string>
    <string name="th">Thầy Toản Hóa</string>
    <string name="rose">Cô Bích Hồng</string>
    <string name="nh">Cô Nguyệt Hà</string>
    <string name="han">Cô Nguyễn Hà</string>
    <string name="toan">Toán</string>
    <string name="ly">Vật Lý</string>
    <string name="hoa">Hóa học</string>
    <string name="sinh">Sinh học</string>
    <string name="van">Ngữ Văn</string>
    <string name="anh">English</string>
    <string name="ko">Không tiết lộ</string>
    <string name="bt_them"> Thêm lớp học</string>
    <string name="danhan">Các thông báo đã nhận</string>
    <string name="noidungthongbao">Nội dung thông báo</string>
    <string name="showclass">Xem lớp học</string>
    <string name="info">Giới thiệu</string>
    <string name="txt_them">Thêm lớp học</string>
    <string name="thongbao">Thông báo</string>
    <array name="subject">
        <item>Toán</item>
        <item>Vật lý</item>
        <item>Hóa học </item>
        <item>Sinh học</item>
        <item>Ngữ Văn</item>
        <item>English</item>
    </array>
    <string-array name="teacher">
        <item>Thầy Tiến Bạc</item>
        <item>Thầy Trường Nghiêm</item>
        <item>Thầy Toản </item>
        <item>Cô Nguyễn Hà</item>
        <item>Cô Nguyệt Hà</item>
        <item>Cô Hồng (Mrs Rose)</item>
    </string-array>
    <string-array name="grade">
        <item>Lớp 9</item>
        <item>Lớp 10</item>
        <item>Lớp 11</item>
        <item>Lớp 12</item>
    </string-array>
    <string-array name="start">
        <item>7h</item>
        <item>8h</item>
        <item>9h</item>
        <item>10h</item>
        <item>13h</item>
        <item>14h</item>
        <item>15h</item>
        <item>16h</item>
        <item>17h</item>
        <item>18h</item>
        <item>19h</item>
    </string-array>

    <string-array name="end">
        <item>9h</item>
        <item>9h30</item>
        <item>10h</item>
        <item>10h30</item>
        <item>11h</item>
        <item>11h30</item>
        <item>12h</item>
        <item>15h</item>
        <item>15h30</item>
        <item>16h</item>
        <item>16h30</item>
        <item>17h</item>
        <item>17h30</item>
        <item>18h</item>
        <item>18h30</item>
        <item>19h</item>
        <item>19h30</item>
        <item>20h</item>
    </string-array>
    <string-array name="day">
        <item>Thứ 2</item>
        <item>Thứ 3</item>
        <item>Thứ 4</item>
        <item>Thứ 5</item>
        <item>Thứ 6</item>
        <item>Thứ 7</item>
        <item>Chủ Nhật</item>
    </string-array>
    <string-array name="ca"
                  >
        <item>Ca 1</item>
        <item>Ca 2</item>
    </string-array>
    <string-array name="stt"
        >
        <item>Buổi 1</item>
        <item>Buổi 2</item>
        <item>Buổi 3</item>
    </string-array>
    <string-array name="total"
        >
        <item>3 buổi</item>
        <item>2 buổi</item>
        <item>1 buổi</item>
    </string-array>
    <string name="title_activity_show_class">ShowClass</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gioithieu">GioithieuActivity</string>
    <string name="title_activity_thongbao">ThongbaoActivity</string>
    <string name="title_activity_thongtin_giaovien">ThongtinGiaovienActivity</string>
    <string name="title_activity_demo">Demo</string>

</resources>
